# rust-serde_db

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
scripts/: qualify.rs
src/: de.rs  lib.rs  ser.rs
src/de/: conversion_error.rs  db_value.rs  db_value_into.rs  deserializable_result_set.rs  deserializable_resultset.rs  deserializable_row.rs  deserialization_error.rs  field_deserializer.rs  mod.rs  row_deserializer.rs  rs_deserializer.rs
src/de/row/: metadata.rs  mod.rs  row.rs
src/ser/: dbv_factory.rs  mod.rs  serialization_error.rs  serializer.rs
tests/: test_resultset.rs  test_resultset_1x1.rs  test_resultset_1xn.rs  test_resultset_mx1.rs  test_resultset_mxn.rs  test_row.rs  test_serialization.rs  test_special_types.rs
tests/mock_db/: error.rs  field_names.rs  fieldnames.rs  mod.rs  mvalue.rs  parameter_type.rs  result_set.rs  resultset.rs  row.rs
tests/mock_db/serde_db_impl/: de.rs  ser.rs
tests/util/: mock_error.rs  mock_metadata.rs  mock_resultset.rs  mock_row.rs  mock_value.rs  mod.rs
