[package]
name = "serde_db"
version = "0.8.2"
authors = ["emabee <meinolf.block@sap.com>"]
edition = "2018"
description = "Deserialization of database resultsets, and serialization of database parameters"
documentation = "https://docs.rs/serde_db/"
keywords = ["relational", "database", "driver", "serde"]
license = "MIT/Apache-2.0"
repository = "https://github.com/emabee/rust-serde_db"
readme = "README.md"

[dependencies]
log = "0.4"
serde = "1.0"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
flexi_logger = "0.11"
serde_derive = "1.0"
bigdecimal = {version = "0.0", features = ["serde"]}
version-sync = "0.8"
