[package]
name = "serde_db"
version = "0.12.0"
authors = ["emabee <meinolf.block@sap.com>"]
edition = "2021"
description = "Deserialization of database result sets, and serialization of database parameters"
documentation = "https://docs.rs/serde_db/"
keywords = ["relational", "database", "driver", "serde"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/emabee/rust-serde_db"
readme = "README.md"

[features]
trace = ["log"]

[dependencies]
log = { version = "0.4", optional = true }
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
flexi_logger = "0.29"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
version-sync = "0.9"
